--- a/expressRest/src_server/views/index.jade
+++ b/expressRest/src_server/views/index.jade
@@ -3,3 +3,8 @@ extends compornents/layout
 block content
   h1= title
   p Welcome to #{title}
+
+  textarea#message
+  button#emit send
+
+  div#message_list
